# IndEAAv2

./: .gitignore  404.html  CNAME  README.md  create-backup.sh  docker-compose-ci.yml  docker-compose-prod.yml  docker-compose.yml  index.html  redeploy.sh  tsconfig.eslint.json
backend/: .coveragerc  conftest.py  pyproject.toml  pytest.ini  test.docx  test.py
backend/authentication/: urls.py  utils.py  views.py
backend/authentication/tests/: conftest.py  test_authentication.py
backend/commands/: apps.py
backend/config/: custom-reference.docx  decorators.py  error_codes.py  errors.py  exceptions.py  responses.py  security.py  settings.py  throttling.py  urls.py  utils.py
backend/config/logs/: middleware.py  utils.py
backend/config/settings/: base.py  ci.py  prod.py
backend/config/tests/: test_exceptions.py
backend/course_evaluations/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/course_evaluations/migrations/: 0001_initial.py  0002_courseevaluationjustification.py  0003_document.py  0004_auto_20220906_1818.py  0005_alter_courseevaluationjustification_development_level.py
backend/course_evaluations/serializers/: custom.py  documents.py  eoc.py  generic.py  justifications.py
backend/documents/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/documents/migrations/: 0001_initial.py  (+2 more)
backend/google/: urls.py  views.py
backend/report/: views.py
backend/reviews/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/status/: tests.py  urls.py  views.py
(+178 files in other folders)
